collapse bug of navbar fix

--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -6,7 +6,11 @@ a.nav-link:hover
 {
     color: #c48f45 !important;
 }
-
+a{
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+}
 .navbar-collapse{
     padding-left:20px;
 }
@@ -26,3 +30,17 @@ a.nav-link:hover
 .dropdown-item{
     cursor: pointer;
 }
+.dropdown-menu{
+    top: 30px;
+    left: -4px;
+}
+/* @media (min-width: 768px) {
+    .dropdown-menu li:hover .sub-menu {
+        visibility: visible;
+    }
+}
+ @media (min-width: 768px) {
+     .dropdown:hover .dropdown-menu {
+         display: block;
+    }
+} */
